# efi-hello-world

./: CMakeLists.txt  README.md  setup.ld
scripts/: create_disk.sh  qemu_run.sh
source/: boot.S  efi.h  main.c  stub.S
